2009-04-23  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Move the Notify* methods into Selector as both
	  Listbox and ComboBox require the same API.

2009-04-23  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: FrameworkElements added to an
	  ItemsCollection need to have their logical parent set to the
	  ItemsControl.

2009-04-22  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Add missing nullcheck around access to a
	  templated part.

2009-04-22  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: ComboBox should return a new ComboBoxItem
	  without applying the container style.

2009-04-22  Alan McGovern  <amcgovern@novell.com>

	* ItemsPresenter.cs: After some extensive testing in
	  silverlight, I think this change is correct. When templating
	  ComboBox, the Popup used to display the items has no visual
	  parent but does have a logical parent. Therefore the only
	  way to connect the ItemsPresenter to the ItemsControl is to
	  fall back to the logical parent when the VisualParent is
	  null. I'm not sure if this is popup specific behaviour or if
	  this is true for all controls which have a null visual
	  parent but non-null logical parent.

2009-04-17  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Make IsSelectionActive work. Also make showing
	  the popup work. Currently no items are being displayed in
	  the popup as the ItemsPresenter is never getting loaded.

2009-04-17  Sebastien Pouliot  <sebastien@ximian.com>

	* SaveFileDialog.cs: Implement DefaultExtbehavior

2009-04-15  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: When an ItemsControl is templated, don't
	  replace the templated visual tree with the ItemsPresenters
	  visual tree.

	* ItemsPresenter.cs: ItemsPresenter should search the visual
	  tree, not logical tree, when trying to find its ItemsControl

2009-04-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* OpenFileDialog.cs:
	* SaveFileDialog.cs: Generate all P/Invoke methods.
