@@ -1,5 +1,9 @@
 2009-04-23  Alan McGovern  <amcgovern@novell.com>
 
+	* ComboBoxItem.cs: Removing unnecessary override
+
+2009-04-23  Alan McGovern  <amcgovern@novell.com>
+
 	* ComboBox.cs: Move the Notify* methods into Selector as both
 	  Listbox and ComboBox require the same API.
 
